<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_professor_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dianatarazi.ncfstudentguide.Professor_profile">

    <ImageView
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginTop="36dp"
        android:id="@+id/profImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="" />

    <TextView
        android:text="@string/professors_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/profImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:id="@+id/ProfName"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:text="@string/Prof_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profImage"
        android:layout_alignLeft="@+id/ProfName"
        android:layout_alignStart="@+id/ProfName"
        android:layout_marginTop="24dp"
        android:id="@+id/Prof_bio" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Prof_bio"
        android:layout_alignLeft="@+id/Prof_bio"
        android:layout_alignStart="@+id/Prof_bio"
        android:layout_marginTop="18dp">

        <TextView
            android:text="@string/classes_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Classes_offered"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:text="@string/office_location_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Office_location"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:text="@string/office_hours_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/office_hours"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:text="@string/Prof_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/prof_email"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

</RelativeLayout>
