<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_professor_finder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dianatarazi.ncfstudentguide.ProfessorFinder">

    <TextView
        android:text="@string/ProfFinderHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ActivityProfFinder_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ActivityProfFinder_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/searchForProf" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchForProf"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?android:attr/textColorPrimaryNoDisable">

            <TextView
                android:text="@string/gary_kalmanovich"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/prof_Gary"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:lineSpacingExtra="8sp"
                android:textSize="18sp"
                android:layout_margin="20dp" />

            <TextView
                android:text="@string/matthew_lepinski"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Prof"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:layout_margin="20dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
